# todoist_tree

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
src/todoist_tree/: __init__.py  headers.py  read_changes.py  task_subsets.py  tree.py  write_changes.py
tests/: test_read.py  test_read_data.py
